--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>YAML-JSON Converter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A simple YAML to JSON converter built with React Javascript." />
+    <meta name="keywords" content="YAML, JSON, converter, React Javascript, web app" />
   </head>
   <body>
     <div id="root"></div>
